--- a/DMSDriver/DMSDriver/Resources/Storyboards/Login.storyboard
+++ b/DMSDriver/DMSDriver/Resources/Storyboards/Login.storyboard
@@ -108,7 +108,7 @@
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                         <userDefinedRuntimeAttributes>
-                                            <userDefinedRuntimeAttribute type="string" keyPath="placeholderKey" value="login_password_hint"/>
+                                            <userDefinedRuntimeAttribute type="string" keyPath="placeholderKey" value="Password"/>
                                         </userDefinedRuntimeAttributes>
                                     </textField>
                                 </subviews>
