--- a/DMSDriver/DMSDriver/Resources/Storyboards/Login.storyboard
+++ b/DMSDriver/DMSDriver/Resources/Storyboards/Login.storyboard
@@ -38,8 +38,12 @@
                                     <action selector="didClickLogin:" destination="3T1-w1-Qsx" eventType="touchUpInside" id="u79-Yh-8ep"/>
                                 </connections>
                             </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo_masof_s" translatesAutoresizingMaskIntoConstraints="NO" id="c15-3W-M3X">
-                                <rect key="frame" x="122.5" y="96" width="130" height="65"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_app" translatesAutoresizingMaskIntoConstraints="NO" id="c15-3W-M3X">
+                                <rect key="frame" x="112.5" y="61" width="150" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="4yo-kZ-oWF"/>
+                                    <constraint firstAttribute="width" constant="150" id="GRM-li-2Tv"/>
+                                </constraints>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="xBQ-JA-gRu">
                                 <rect key="frame" x="63.5" y="201" width="248.5" height="60"/>
@@ -209,8 +213,8 @@
     </scenes>
     <resources>
         <image name="check_selected" width="24" height="24"/>
+        <image name="ic_app" width="370" height="189"/>
         <image name="ic_login_password" width="18" height="18"/>
         <image name="ic_login_user" width="18" height="18"/>
-        <image name="logo_masof_s" width="130" height="65"/>
     </resources>
 </document>
