--- a/DMSDriver/DMSDriver/Resources/Storyboards/Order.storyboard
+++ b/DMSDriver/DMSDriver/Resources/Storyboards/Order.storyboard
@@ -20,8 +20,30 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ab7-zW-A5e">
+                                <rect key="frame" x="0.0" y="20" width="375" height="30"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No internet connection" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lUe-cT-W0q">
+                                        <rect key="frame" x="114" y="0.0" width="148" height="30"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="string" keyPath="localizeKey" value="error_lost_network_connection"/>
+                                        </userDefinedRuntimeAttributes>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="lUe-cT-W0q" firstAttribute="centerY" secondItem="Ab7-zW-A5e" secondAttribute="centerY" id="1Ns-ZP-71C"/>
+                                    <constraint firstAttribute="height" constant="30" id="amu-ZZ-kBU"/>
+                                    <constraint firstItem="lUe-cT-W0q" firstAttribute="centerX" secondItem="Ab7-zW-A5e" secondAttribute="centerX" id="g8x-Og-y4M"/>
+                                    <constraint firstAttribute="bottom" secondItem="lUe-cT-W0q" secondAttribute="bottom" id="hJG-gM-ixU"/>
+                                    <constraint firstItem="lUe-cT-W0q" firstAttribute="top" secondItem="Ab7-zW-A5e" secondAttribute="top" id="sBx-Hh-OZd"/>
+                                </constraints>
+                            </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="258" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Bdk-MM-huX">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <rect key="frame" x="0.0" y="50" width="375" height="617"/>
                                 <color key="backgroundColor" red="0.89803921568627454" green="0.89803921568627454" blue="0.89803921568627454" alpha="1" colorSpace="calibratedRGB"/>
                                 <color key="sectionIndexBackgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                 <prototypes>
@@ -260,10 +282,13 @@
                         <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="Bdk-MM-huX" firstAttribute="leading" secondItem="wEh-bU-iJ0" secondAttribute="leading" id="3OA-F1-7qk"/>
-                            <constraint firstItem="Bdk-MM-huX" firstAttribute="top" secondItem="PTu-Ox-OCn" secondAttribute="top" id="42d-CL-rJH"/>
+                            <constraint firstItem="Bdk-MM-huX" firstAttribute="top" secondItem="Ab7-zW-A5e" secondAttribute="bottom" id="4Gg-Fh-4XL"/>
                             <constraint firstItem="wEh-bU-iJ0" firstAttribute="bottom" secondItem="Bdk-MM-huX" secondAttribute="bottom" id="8By-Ns-BoW"/>
+                            <constraint firstItem="Ab7-zW-A5e" firstAttribute="leading" secondItem="PTu-Ox-OCn" secondAttribute="leading" id="GHm-rQ-SGA"/>
+                            <constraint firstItem="wEh-bU-iJ0" firstAttribute="trailing" secondItem="Ab7-zW-A5e" secondAttribute="trailing" id="KQF-za-DzX"/>
                             <constraint firstItem="oPo-gn-VPd" firstAttribute="centerY" secondItem="PTu-Ox-OCn" secondAttribute="centerY" id="Lve-3M-uqA"/>
                             <constraint firstItem="Bdk-MM-huX" firstAttribute="trailing" secondItem="wEh-bU-iJ0" secondAttribute="trailing" id="OnN-dF-53l"/>
+                            <constraint firstItem="Ab7-zW-A5e" firstAttribute="top" secondItem="wEh-bU-iJ0" secondAttribute="top" id="eEO-xV-k2k"/>
                             <constraint firstItem="oPo-gn-VPd" firstAttribute="centerX" secondItem="PTu-Ox-OCn" secondAttribute="centerX" id="mNa-qg-YNn"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="wEh-bU-iJ0"/>
@@ -297,8 +322,11 @@
                         </rightBarButtonItems>
                     </navigationItem>
                     <connections>
+                        <outlet property="conHeightVInternetConnection" destination="amu-ZZ-kBU" id="5AO-8y-ae2"/>
+                        <outlet property="lblInternetConnection" destination="lUe-cT-W0q" id="MRg-P1-GdR"/>
                         <outlet property="noOrdersLabel" destination="oPo-gn-VPd" id="4pW-xQ-Cfx"/>
                         <outlet property="tableView" destination="Bdk-MM-huX" id="dRE-Ix-hW4"/>
+                        <outlet property="vInternetConnection" destination="Ab7-zW-A5e" id="7pT-gP-zWC"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2HK-8e-J4O" userLabel="First Responder" sceneMemberID="firstResponder"/>
