--- a/DMSDriver/DMSDriver/Resources/Storyboards/Route.storyboard
+++ b/DMSDriver/DMSDriver/Resources/Storyboards/Route.storyboard
@@ -20,8 +20,30 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ofZ-Ov-zl1">
+                                <rect key="frame" x="0.0" y="20" width="375" height="30"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No internet connection" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mz9-ds-W3S">
+                                        <rect key="frame" x="114" y="0.0" width="148" height="30"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="string" keyPath="localizeKey" value="error_lost_network_connection"/>
+                                        </userDefinedRuntimeAttributes>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="mz9-ds-W3S" firstAttribute="top" secondItem="ofZ-Ov-zl1" secondAttribute="top" id="GzI-2y-OIe"/>
+                                    <constraint firstAttribute="bottom" secondItem="mz9-ds-W3S" secondAttribute="bottom" id="TFa-FQ-OC1"/>
+                                    <constraint firstItem="mz9-ds-W3S" firstAttribute="centerY" secondItem="ofZ-Ov-zl1" secondAttribute="centerY" id="UGP-23-5k5"/>
+                                    <constraint firstAttribute="height" constant="30" id="rza-mT-3cR"/>
+                                    <constraint firstItem="mz9-ds-W3S" firstAttribute="centerX" secondItem="ofZ-Ov-zl1" secondAttribute="centerX" id="wUh-2A-hqf"/>
+                                </constraints>
+                            </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="KQA-xX-EPy">
-                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <rect key="frame" x="0.0" y="50" width="375" height="617"/>
                                 <color key="backgroundColor" red="0.89803921568627454" green="0.89803921568627454" blue="0.89803921568627454" alpha="1" colorSpace="calibratedRGB"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="RouteListHeaderCell" rowHeight="62" id="juS-W3-doM" customClass="RouteListCell" customModule="DMSDriver" customModuleProvider="target">
@@ -397,7 +419,7 @@
                                 </constraints>
                             </view>
                             <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Have no routes" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xpg-qv-SkC">
-                                <rect key="frame" x="136.5" y="334.5" width="102" height="18"/>
+                                <rect key="frame" x="136.5" y="349.5" width="102" height="18"/>
                                 <fontDescription key="fontDescription" type="system" weight="light" pointSize="15"/>
                                 <color key="textColor" red="0.37254901959999998" green="0.37254901959999998" blue="0.37254901959999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
@@ -409,22 +431,28 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="Bhx-uf-sCd" firstAttribute="bottom" secondItem="KQA-xX-EPy" secondAttribute="bottom" id="3nq-P2-G9t"/>
-                            <constraint firstItem="KQA-xX-EPy" firstAttribute="top" secondItem="Bhx-uf-sCd" secondAttribute="top" id="EBe-Ar-k1Y"/>
+                            <constraint firstItem="Bhx-uf-sCd" firstAttribute="trailing" secondItem="ofZ-Ov-zl1" secondAttribute="trailing" id="6Es-OZ-ifZ"/>
                             <constraint firstItem="xpg-qv-SkC" firstAttribute="centerY" secondItem="KQA-xX-EPy" secondAttribute="centerY" id="Jgv-Ki-UsO"/>
                             <constraint firstItem="xpg-qv-SkC" firstAttribute="centerX" secondItem="KQA-xX-EPy" secondAttribute="centerX" id="Ocf-iR-pfE"/>
                             <constraint firstItem="h6R-mN-a1V" firstAttribute="trailing" secondItem="Bhx-uf-sCd" secondAttribute="trailing" id="aL6-tx-ag8"/>
                             <constraint firstItem="KQA-xX-EPy" firstAttribute="leading" secondItem="Bhx-uf-sCd" secondAttribute="leading" id="bWP-DK-Cja"/>
+                            <constraint firstItem="ofZ-Ov-zl1" firstAttribute="top" secondItem="Bhx-uf-sCd" secondAttribute="top" id="haK-up-Sdw"/>
+                            <constraint firstItem="KQA-xX-EPy" firstAttribute="top" secondItem="ofZ-Ov-zl1" secondAttribute="bottom" id="jDm-gl-e8q"/>
                             <constraint firstItem="h6R-mN-a1V" firstAttribute="leading" secondItem="Bhx-uf-sCd" secondAttribute="leading" id="lUs-BD-LqF"/>
                             <constraint firstItem="Bhx-uf-sCd" firstAttribute="trailing" secondItem="KQA-xX-EPy" secondAttribute="trailing" id="pmp-tz-clc"/>
+                            <constraint firstItem="ofZ-Ov-zl1" firstAttribute="leading" secondItem="Bhx-uf-sCd" secondAttribute="leading" id="rKL-5l-THf"/>
                             <constraint firstItem="Bhx-uf-sCd" firstAttribute="bottom" secondItem="h6R-mN-a1V" secondAttribute="bottom" id="viz-KS-Gj9"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Bhx-uf-sCd"/>
                     </view>
                     <connections>
+                        <outlet property="conHeightVInternetConnection" destination="rza-mT-3cR" id="tdu-wx-GiN"/>
                         <outlet property="datePickerView" destination="gia-BM-VGq" id="VmV-tW-G9X"/>
+                        <outlet property="lblInternetConnection" destination="mz9-ds-W3S" id="HmL-oB-wQV"/>
                         <outlet property="lblNoResult" destination="xpg-qv-SkC" id="55C-Wq-sJl"/>
                         <outlet property="pickerContainerView" destination="h6R-mN-a1V" id="HhO-Cf-FyC"/>
                         <outlet property="tbvContent" destination="KQA-xX-EPy" id="t5n-MH-shR"/>
+                        <outlet property="vInternetConnection" destination="ofZ-Ov-zl1" id="hDK-9V-xSs"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="OYu-Se-AJ8" userLabel="First Responder" sceneMemberID="firstResponder"/>
