[DirectMail] - Fix https://seldat.atlassian.net/browse/DIR-107 and update orderList screen

--- a/DMSDriver/DMSDriver/Resources/Storyboards/Order.storyboard
+++ b/DMSDriver/DMSDriver/Resources/Storyboards/Order.storyboard
@@ -700,10 +700,10 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="o8M-WR-6wj">
-                                                    <rect key="frame" x="15" y="0.0" width="329" height="91"/>
+                                                    <rect key="frame" x="15" y="0.0" width="329" height="93"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Items" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IpX-S1-xPu">
-                                                            <rect key="frame" x="15" y="0.0" width="199" height="91"/>
+                                                            <rect key="frame" x="15" y="0.0" width="199" height="93"/>
                                                             <fontDescription key="fontDescription" name="ArialMT" family="Arial" pointSize="14"/>
                                                             <color key="textColor" red="0.28235294119999998" green="0.36470588240000001" blue="0.43921568630000002" alpha="1" colorSpace="calibratedRGB"/>
                                                             <nil key="highlightedColor"/>
@@ -712,7 +712,7 @@
                                                             </userDefinedRuntimeAttributes>
                                                         </label>
                                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lLW-rH-aHw">
-                                                            <rect key="frame" x="219" y="28" width="100" height="35"/>
+                                                            <rect key="frame" x="219" y="29" width="100" height="35"/>
                                                             <subviews>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Driver" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sw7-f3-jsD">
                                                                     <rect key="frame" x="3" y="10" width="67" height="16"/>
@@ -720,9 +720,10 @@
                                                                     <color key="textColor" red="0.0" green="0.61568627450000002" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
-                                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uNH-DR-gd4">
+                                                                <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="right" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uNH-DR-gd4">
                                                                     <rect key="frame" x="0.0" y="0.0" width="100" height="35"/>
-                                                                    <state key="normal" image="ic_dropdown"/>
+                                                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="7" maxY="0.0"/>
+                                                                    <state key="normal" image="ic_dropdownblue"/>
                                                                     <connections>
                                                                         <action selector="onbtnClickDropdownWithBtn:" destination="kPh-1L-DIt" eventType="touchUpInside" id="j75-Bj-yTd"/>
                                                                     </connections>
@@ -756,7 +757,7 @@
                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <constraints>
                                                         <constraint firstItem="lLW-rH-aHw" firstAttribute="centerY" secondItem="IpX-S1-xPu" secondAttribute="centerY" id="0u0-zA-Pbp"/>
-                                                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="65" id="9gB-np-vQg"/>
+                                                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="50" id="9gB-np-vQg"/>
                                                         <constraint firstAttribute="trailing" secondItem="lLW-rH-aHw" secondAttribute="trailing" constant="10" id="Foh-c4-5nh"/>
                                                         <constraint firstItem="IpX-S1-xPu" firstAttribute="top" secondItem="o8M-WR-6wj" secondAttribute="top" id="IjJ-Y9-ei0"/>
                                                         <constraint firstItem="IpX-S1-xPu" firstAttribute="leading" secondItem="o8M-WR-6wj" secondAttribute="leading" constant="15" id="bDV-cX-r9n"/>
@@ -767,7 +768,7 @@
                                             </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
-                                                <constraint firstAttribute="bottom" secondItem="o8M-WR-6wj" secondAttribute="bottom" constant="2" id="5Lg-zM-QT4"/>
+                                                <constraint firstAttribute="bottom" secondItem="o8M-WR-6wj" secondAttribute="bottom" id="5Lg-zM-QT4"/>
                                                 <constraint firstAttribute="trailing" secondItem="o8M-WR-6wj" secondAttribute="trailing" constant="15" id="JTl-gc-d2J"/>
                                                 <constraint firstItem="o8M-WR-6wj" firstAttribute="top" secondItem="b8g-05-B7g" secondAttribute="top" id="bos-oP-u7c"/>
                                                 <constraint firstItem="o8M-WR-6wj" firstAttribute="leading" secondItem="b8g-05-B7g" secondAttribute="leading" constant="15" id="tIY-nk-UHj"/>
@@ -1441,7 +1442,7 @@
         <image name="close" width="32" height="32"/>
         <image name="home-map-marker" width="22" height="22"/>
         <image name="ic_camera" width="66" height="66"/>
-        <image name="ic_dropdown" width="25" height="14"/>
+        <image name="ic_dropdownblue" width="20" height="12"/>
         <image name="ic_noimage" width="122" height="104"/>
         <image name="ic_time" width="11" height="11"/>
         <image name="ic_viewList" width="26" height="23"/>
